# versecbot-PersonalBests

./: README.md  pyproject.toml
src/srsec_personal_bests/: __init__.py  logging.py  main.py  settings.py
src/versecbot_personal_bests/: __init__.py  jobs.py  logging.py  main.py  plugin.py  settings.py
tests/: test_config.toml  test_personal_bests.py  test_settings.py
