[build-system]
    requires = ["hatchling"]
    build-backend = "hatchling.build"

[project]
    name = "versecbot_personal_bests"
    version = "0.2"
    authors = [{ name = "Museus", email = "versecbot@museus.dev" }]
    description = "Speedrun Secretary plugin to manage personal bests in a channel"
    readme = "README.md"
    requires-python = ">=3.8"
    classifiers = [
        "Programming Language :: Python :: 3",
        "Operating System :: OS Independent",
    ]

    license = "MIT"
    license-files = ["LICEN[CS]E*"]

    [project.urls]
        Homepage = "https://github.com/Museus/SupportiveShade"
        Issues = "https://github.com/Museus/SupportiveShade/issues"


    [project.entry-points.'versecbot.plugins']
        a = 'versecbot_personal_bests:HandlePersonalBestsPlugin'
